// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > celebration scenario - turn 5 1`] = `
[
  "critical:persona_identity",
  "hint:agent_identity",
  "hint:awareness_deep",
  "hint:awareness_momentum",
  "hint:celebration_opportunity",
  "hint:cognitive-transition",
  "hint:conversational_natural_speech",
  "hint:energy_mirroring",
  "hint:human_personality_timing",
  "hint:memory_callback",
  "hint:personalization",
  "hint:response_tuning",
  "hint:session_flow_topic",
  "hint:task_context",
  "hint:therapeutic_framework",
  "standard:arc_guidance",
  "standard:celebration",
  "standard:coaching",
  "standard:intent_empathy",
  "standard:life_event",
  "standard:methodology",
  "standard:team_availability",
  "standard:team_locked",
]
`;

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > deep conversation scenario - turn 10 1`] = `
[
  "critical:persona_identity",
  "hint:agent_identity",
  "hint:awareness_deep",
  "hint:callback_opportunity",
  "hint:celebration_opportunity",
  "hint:conversational_natural_speech",
  "hint:energy_mirroring",
  "hint:human_personality_timing",
  "hint:lovable_presence",
  "hint:memory_callback",
  "hint:personalization",
  "hint:physical_presence",
  "hint:response_tuning",
  "hint:task_context",
  "hint:therapeutic_framework",
  "hint:vocab_mirror",
  "standard:arc_guidance",
  "standard:coaching",
  "standard:methodology",
  "standard:team_availability",
  "standard:team_locked",
]
`;

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > distress scenario - turn 3 1`] = `
[
  "critical:emotional",
  "critical:emotional_crisis",
  "critical:persona_identity",
  "high:safety",
  "hint:agent_identity",
  "hint:awareness_deep",
  "hint:awareness_thinking",
  "hint:cognitive_distortion",
  "hint:conversational_natural_speech",
  "hint:energy_mirroring",
  "hint:engagement",
  "hint:human_personality_moment",
  "hint:human_personality_timing",
  "hint:personalization",
  "hint:response_tuning",
  "hint:task_context",
  "hint:wisdom-synthesis",
  "standard:arc_guidance",
  "standard:intent_empathy",
  "standard:persona_boundary",
  "standard:team_availability",
  "standard:team_locked",
  "standard:wisdom-synthesis",
]
`;

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > financial question scenario - turn 4 1`] = `
[
  "critical:persona_identity",
  "high:goal_detection",
  "hint:agent_identity",
  "hint:awareness_deep",
  "hint:awareness_momentum",
  "hint:behavioral_economics",
  "hint:celebration_opportunity",
  "hint:cognitive-transition",
  "hint:conversational_natural_speech",
  "hint:conversational_quote_callback",
  "hint:energy_awareness",
  "hint:energy_mirroring",
  "hint:human_personality_timing",
  "hint:natural_uncertainty",
  "hint:personalization",
  "hint:physical_presence",
  "hint:response_tuning",
  "hint:task_context",
  "hint:therapeutic_framework",
  "hint:values_opportunity",
  "hint:vocab_mirror",
  "hint:wisdom-synthesis",
  "standard:arc_guidance",
  "standard:coaching",
  "standard:methodology",
  "standard:quality_negative",
  "standard:team_availability",
  "standard:team_locked",
  "standard:wisdom-synthesis",
]
`;

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > greeting scenario - turn 1 1`] = `
[
  "critical:persona_identity",
  "hint:agent_identity",
  "hint:awareness_deep",
  "hint:awareness_thinking",
  "hint:callback_opportunity",
  "hint:cognitive-monologue",
  "hint:conversational_natural_speech",
  "hint:energy_mirroring",
  "hint:human_personality_timing",
  "hint:personalization",
  "hint:response_length",
  "hint:response_tuning",
  "hint:task_context",
  "standard:arc_guidance",
  "standard:coaching",
  "standard:team_availability",
  "standard:team_locked",
]
`;

exports[`Intelligence Pipeline E2E > Snapshots (Builder Sources) > habits question scenario - turn 6 1`] = `
[
  "critical:persona_identity",
  "critical:role_boundary_violation",
  "hint:agent_identity",
  "hint:awareness_deep",
  "hint:celebration_opportunity",
  "hint:cognitive-habit",
  "hint:conversational_natural_speech",
  "hint:energy_mirroring",
  "hint:human_personality_moment",
  "hint:human_personality_timing",
  "hint:lovable_presence",
  "hint:personalization",
  "hint:response_tuning",
  "hint:task_context",
  "hint:team_handoff",
  "hint:therapeutic_framework",
  "hint:vocab_mirror",
  "standard:arc_guidance",
  "standard:coaching",
  "standard:intent_advice",
  "standard:methodology",
  "standard:persona_boundary",
  "standard:team_availability",
  "standard:team_locked",
]
`;
